# FPANR

./: myflags.xml  mytest.cfg
FPANRlib/: .gitignore  Makefile.am  README.md  configure.ac
FPANRlib/examples/: Makefile.am  conversion.c  main.c
FPANRlib/src/: Makefile.am  libfpanrio.c  libfpanrio.h
LUDecomposition/: LUFacto.c  LUFacto.h  fig1_LUP_multi.plot  fig1_multi.plot  fig2_LUP_multi.plot  fig2_multi.plot  hilbert_LUP_multi.plot  hilbert_multi.plot  hungarian.c  hungarian.h  main.c  multiplot.plot  utils.c  utils.h
cg/: cg.c  cg.h  cg_fpanr.c  cg_prb  cg_prb.c  cg_prb_fpanr.c  cg_prb_output.txt  fpanrlib.c  libfpanr.h
libFPANRio/: Makefile.am  README.md  configure.ac
libFPANRio/examples/: Makefile.am  configure.ac  conversion.c  fp2bin.h
libFPANRio/src/: Makefile.am  libfpanrio.c  libfpanrio.h
tests/: .gitignore  Makefile.am  README.md  configure.ac
tests/examples/: Makefile.am  newton.c  newtonFPANR.c
tests/src/: FPANR.c  FPANRlib.c  FPANRlib.h  Makefile.am  fp2bin.c
tests/tests/: Makefile.am  check_fpanr.c
verificarlo/: Makefile.am  README.md  configure.ac  verificarlo.in.in
verificarlo/src/: Makefile  Makefile.am  Makefile.in
verificarlo/src/common/: Makefile  Makefile.in  libtinymt64.la  libtinymt64_la-tinymt64.lo
verificarlo/src/common/.deps/: libtinymt64_la-tinymt64.Plo
verificarlo/src/common/.libs/: libtinymt64.la
verificarlo/src/libfpanr/: Makefile  Makefile.am  Makefile.in  fpanrlib.c  fpanrlib.lo  libfpanr.h  libfpanr.la
verificarlo/src/libfpanr/.deps/: fpanrlib.Plo
verificarlo/src/libfpanr/.libs/: libfpanr.la  libfpanr.lai  libfpanr.so.0.0.0
verificarlo/src/libmca-mpfr/: Makefile  Makefile.in  libmcampfr.la
verificarlo/src/libmca-mpfr/.deps/: mcalib.Plo
verificarlo/src/libmca-mpfr/.libs/: libmcampfr.la  libmcampfr.lai  libmcampfr.so.0.0.0
verificarlo/src/libmca-quad/: Makefile  Makefile.in  libmcaquad.la  mcalib.lo
verificarlo/src/libmca-quad/.deps/: mcalib.Plo
verificarlo/src/libmca-quad/.libs/: libmcaquad.la  libmcaquad.lai  libmcaquad.so.0  libmcaquad.so.0.0.0
verificarlo/src/libvfcinstrument/: Makefile  Makefile.in  libvfcinstrument.la  libvfcinstrument_la-libVFCInstrument.lo
verificarlo/src/libvfcinstrument/.deps/: libvfcinstrument_la-libVFCInstrument.Plo
verificarlo/src/libvfcinstrument/.libs/: libvfcinstrument.la  libvfcinstrument.lai  libvfcinstrument.so.0  libvfcinstrument.so.0.0.0
verificarlo/src/vfcwrapper/: vfcwrapper.c  vfcwrapper.h
verificarlo/tests/: Makefile  Makefile.in
verificarlo/tests/test_backends/: check.py  out_fpanr.orig  out_mpfr  out_mpfr.orig  out_quad  out_quad.orig  test  test.1.ll  test.2.ll  test.sh
verificarlo/tests/test_ffastmath/: output1  output2  test  test.1.ll  test.2.ll
verificarlo/tests/test_kahan/: kahan.1.ll  kahan.2.ll  output1  output2  test
verificarlo/tests/test_linear_system_kahan/: linear.1.ll  linear.2.ll  output  test
verificarlo/tests/test_per_function/: outputf1  outputf2  outputg1  test  test.1.ll  test.2.ll
verificarlo/tests/test_rr_mode_exact/: rr_mode  rr_mode.1.ll  rr_mode.2.ll  test.sh
verificarlo/tests/test_tchebychev/: output  tchebychev  tchebychev.1.ll  tchebychev.2.ll
