 # libtool dynamic shared library
lib_LTLIBRARIES = libfpanrio.la
libfpanrio_la_SOURCES = libfpanrio.c 
include_HEADERS = libfpanrio.h
# EXTRA_DIST = libfpanrio.h
libfpanrio_la_LDFLAGS = -lm
#libfpanrio_la_LIBADD = ../common/libtinymt64.la
library_includedir =$(includedir)/
library_include_HEADERS = libfpanrio.h   

ACLOCAL_AMFLAGS = -I m4